fixing execution of rake tasks more than once and improving the codebase by adding logs in case of success and in case of errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,7 @@ jobs:
       - name: Run tests
         env:
           RAILS_ENV: test
+          API_KEY_SPOONACULAR: ${{ secrets.API_KEY_SPOONACULAR }}
           # REDIS_URL: redis://localhost:6379/0
         run: bin/rails db:test:prepare test test:system
 
